<resources>
    <string name="app_name">Champs21</string>
    <string name="title_activity_main">""</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="menu_search">Menu Search</string>
    <string name="search_hint">Search</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="resource_centre">Resource Centre</string>
    <string name="news_articles"><![CDATA[News & Articles]]></string>
    <string name="fitness_health"><![CDATA[Fitness & Health]]></string>
    <string name="food_nutration"><![CDATA[Food & Nutration]]></string>
    <string name="about_us"><![CDATA[আমাদের সম্পর্কে]]></string>
    <string name="terms_policy"><![CDATA[Terms & Policy]]></string>
    <string name="all_news">সব</string>
    <string name="news">খবর</string>
    <string name="scitech">বিজ্ঞানপ্রযুক্তি</string>
    <string name="apps_games">অ্যাপস ও গেইমস</string>
    <string name="champion">চ্যাম্পিয়ন</string>
    <string name="life_style">জীবনযাত্রা</string>
    <string name="resource_center">রিসোর্স সেন্টার </string>
    <string name="sports">খেলাধুলা </string>
    <string name="entertainment">বিনোদন </string>
    <string name="video">ভিডিও </string>
    <string name="sample_text">Sample</string>
    <string name="international">আন্তর্জাতিক</string>
    <string name="bangladesh">বাংলাদেশ</string>
    <string name="gadget">গ্যাজেট</string>
    <string name="techworld">প্রযুক্তিবিশ্ব</string>
    <string name="apps_review">অ্যাপস রিভিউ</string>
    <string name="entrepreneur">উদ্যোক্তা</string>
    <string name="personality">ব্যক্তিত্ব</string>
    <string name="business">ব্যবসা</string>
    <string name="extra_curricular">অতিরিক্ত পাঠ্যক্রম</string>
    <string name="shopping">কেনাকাটা</string>
    <string name="food">খাবার</string>
    <string name="household">ঘরদোর</string>
    <string name="job">চাকরি</string>
    <string name="travel">ভ্রমণ</string>
    <string name="recipes">রেসিপি</string>
    <string name="health"> স্বাস্থ্য</string>
    <string name="history">ইতিহাস</string>
    <string name="flora_and_fauna">উদ্ভিদ ও প্রাণীজগত</string>
    <string name="tradition">ঐতিহ্য</string>
    <string name="math">গণিত</string>
    <string name="geography">জিওগ্রাফি</string>
    <string name="science">বিজ্ঞান</string>
    <string name="rocking_experiments">রকিং এক্সপেরিমেন্টস</string>
    <string name="teaching_resources">শিক্ষামূলক উপকরণ</string>
    <string name="literature">সাহিত্য</string>
    <string name="others">অন্যান্য</string>
    <string name="cricket">ক্রিকেট</string>
    <string name="tennis">টেনিস</string>
    <string name="football">ফুটবল</string>
    <string name="tv_show">টিভি শো</string>
    <string name="music">মিউজিক</string>
    <string name="cinema">সিনেমা</string>
    <string name="more_news">র আরও খবর</string>
    <string name="my_api_key">ec01f8c2eb6ac402f2ca026dc2d9b8fd</string>
    <string name="error_msg">ইন্টারনেট কানেকশন প্রয়োজন </string>
    <string name="btn_retry">আবার চেষ্টা করুন</string>
    <string name="error_msg_no_internet">Not connected to internet</string>
    <string name="error_msg_timeout">The server took too long to respond</string>
    <string name="error_msg_unknown">An unexpected error occurred</string>
    <string name="tap_to_reload">Tap to reload</string>
    <string name="add_id">ca-app-pub-3940256099942544/6300978111</string>
</resources>